# pyo3-example

./: Cargo.toml  README.md  ejemplo.pyi  pyproject.toml  requirements.txt
src/: lib.rs  main.rs
test_mo/: tes.py
tests/: test_limit_check.py
