[package]
name = "ejemplo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ejemplo"
# change to lib to debug pure rust with cargo run
crate-type = ["cdylib"]

[dependencies]
generator = "0.8.2"
may = "0.3.46"
pyo3 = "0.22.2"
